# River_mesh_lofting

./: .gitignore  ADVANCED_FEATURES.md  BUILD_FIX_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  QUICK_UPGRADE_GUIDE.md  VISUALIZATION_GUIDE.md
.claude/: settings.local.json
shaders/: particle.frag  particle.vert  particle_advanced.frag  particle_advanced.vert  river_bed.frag  river_bed.vert  river_bed_advanced.frag  water.frag  water.vert  water_advanced.frag
src/: DELETE_ME_particle_system_cu.txt  main.cpp  opengl_utils.hpp  particle_kernels.cu  particle_system.cpp  particle_system.cu  particle_system.cuh  particle_system_host.cu  river_mesh.cpp  river_mesh.hpp  shader_utils.hpp  simulation.cu  simulation.cuh
